fix: center align items in hero-wrap class

--- a/style.css
+++ b/style.css
@@ -136,5 +136,6 @@ button {
 
 .hero-wrap {
     position: flex-column;
+    align-items: center;
     
 }
